--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
-          docker build -t your_dockerhub_username/your_app_name:latest .
-          docker push your_dockerhub_username/your_app_name:latest
+          docker build -t thilak2302/app:latest .
+          docker push thilak2302/app:latest
 
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v0.1.6
@@ -35,7 +35,7 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            docker pull your_dockerhub_username/your_app_name:latest
+            docker pull thilak2302/app:latest
             docker stop your_app_container || true
             docker rm your_app_container || true
-            docker run -d --name your_app_container -p 3000:3000 your_dockerhub_username/your_app_name:latest
+            docker run -d --name be_container -p 3000:3000 thilak2302/app:latest
