--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,6 @@ jobs:
           port: ${{ secrets.VPS_PORT }}
           script: |
             docker pull thilak2302/app:latest
-            docker stop your_app_container || true
-            docker rm your_app_container || true
+            docker stop be_container || true
+            docker rm be_container || true
             docker run -d --name be_container -p 3000:3000 thilak2302/app:latest
