--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,4 +53,4 @@ jobs:
             docker pull thilak2302/app:latest
             docker stop be_container || true
             docker rm be_container || true
-            docker run -d --name be_container -p 2511:3000 thilak2302/app:latest --network=host
+            docker run --network=host -d --name be_container -p 2511:3000 thilak2302/app:latest 
