--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,4 +53,18 @@ jobs:
             docker pull thilak2302/app:latest
             docker stop be_container || true
             docker rm be_container || true
-            docker run --network=host -d --name be_container -p 2511:3000 thilak2302/app:latest 
+            docker run --network=host -d --name be_container -p 2511:3000
+              -e GITHUB_CLIENT_ID=${{ secrets.GITHLIENT_ID }} \
+              -e GITHUB_CLIENT_SECRET=${{ secrets.GITHCLIENT_SECRET }} \
+              -e FRONTEND_URL=${{ secrets.FRONTEND_URL }} \
+              -e GOOGLE_CLIENT_ID=${{ secrets.GCLIENTID }} \
+              -e BACKEND_URL=${{ secrets.BACKEND_URL }} \
+              -e APPLE_PRIVATE_KEY=${{ secrets.APPLE_PRIV_KEY }} \
+              -e APPLE_CLIENT_ID=${{ secrets.APPLE_CLIENT_ID }} \
+              -e HOST_DB=${{ secrets.HOST_DB }} \
+              -e HOST_DB_PORT=${{ secrets.HOST_DB_PORT }} \
+              -e DB_UNAME=${{ secrets.HOST_DB_UNAME }} \
+              -e DB_UPASS=${{ secrets.HOST_DB_UPWD }} \
+              -e DB_NAME=${{ secrets.HOST_DB_NAME }} \
+              -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
+              thilak2302/app:latest 
