--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT }}
-          env: |
+          env:
             FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
             GOOGLE_CLIENT_ID: ${{ secrets.GCLIENTID }}
             GOOGLE_CLIENT_SECRET: ${{ secrets.GCLIENT_SECRET }}
