--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy NestJS App
 on:
   push:
     branches:
-      - development-vps  # Trigger deployment on push to main branch
+      - development-vps
 
 jobs:
   deploy:
@@ -24,39 +24,23 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
-#          docker build -t thilak2302/app:latest .
-               docker build --build-arg FRONTEND_URL=${{ secrets.FRONTEND_URL }} \
-               --build-arg GOOGLE_CLIENT_ID=${{ secrets.GCLIENTID }} \
-               --build-arg GOOGLE_CLIENT_SECRET=${{ secrets.GCLIENT_SECRET }} \
-               --build-arg FRONTEND_URL=${{ secrets.FRONTEND_URL }} \
-               --build-arg BACKEND_URL=${{ secrets.BACKEND_URL }} \
-               --build-arg APPLE_PRIVATE_KEY=${{ secrets.APPLE_PRIV_KEY }} \
-               --build-arg APPLE_CLIENT_ID=${{ secrets.APPLE_CLIENT_ID }} \
-               --build-arg HOST_DB=${{ secrets.HOST_DB }} \
-               --build-arg HOST_DB_PORT=${{ secrets.HOST_DB_PORT }} \
-               --build-arg DB_UNAME=${{ secrets.HOST_DB_UNAME }} \
-               --build-arg DB_UPASS=${{ secrets.HOST_DB_UPWD }} \
-               --build-arg DB_NAME=${{ secrets.HOST_DB_NAME }} \
-               --build-arg JWT_SECRET=${{ secrets.JWT_SECRET }} \
-               --build-arg GITHUB_CLIENT_ID=${{ secrets.GITHLIENT_ID }} \
-               --build-arg GITHUB_CLIENT_SECRET=${{ secrets.GITHCLIENT_SECRET }} \
-               --env-file .env -t thilak2302/app:latest .
-               docker push thilak2302/app:latest .
-#        env:
-#            FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
-#            GOOGLE_CLIENT_ID: ${{ secrets.GCLIENTID }}
-#            GOOGLE_CLIENT_SECRET: ${{ secrets.GCLIENT_SECRET }}
-#            BACKEND_URL: ${{ secrets.BACKEND_URL }}
-#            APPLE_PRIVATE_KEY: ${{ secrets.APPLE_PRIV_KEY }}
-#            APPLE_CLIENT_ID: ${{ secrets.APPLE_CLIENT_ID }}
-#            HOST_DB: ${{ secrets.HOST_DB }}
-#            HOST_DB_PORT: ${{ secrets.HOST_DB_PORT }}
-#            DB_UNAME: ${{ secrets.HOST_DB_UNAME }}
-#            DB_UPASS: ${{ secrets.HOST_DB_UPWD }}
-#            DB_NAME: ${{ secrets.HOST_DB_NAME }}
-#            JWT_SECRET: ${{ secrets.JWT_SECRET }}
-#            GITHUB_CLIENT_ID: ${{ secrets.GITHLIENT_ID }}
-#            GITHUB_CLIENT_SECRET: ${{ secrets.GITHCLIENT_SECRET }}
+          docker build \
+            --build-arg GOOGLE_CLIENT_ID=${{ secrets.GCLIENTID }} \
+            --build-arg GOOGLE_CLIENT_SECRET=${{ secrets.GCLIENT_SECRET }} \
+            --build-arg FRONTEND_URL=${{ secrets.FRONTEND_URL }} \
+            --build-arg BACKEND_URL=${{ secrets.BACKEND_URL }} \
+            --build-arg APPLE_PRIVATE_KEY=${{ secrets.APPLE_PRIV_KEY }} \
+            --build-arg APPLE_CLIENT_ID=${{ secrets.APPLE_CLIENT_ID }} \
+            --build-arg HOST_DB=${{ secrets.HOST_DB }} \
+            --build-arg HOST_DB_PORT=${{ secrets.HOST_DB_PORT }} \
+            --build-arg DB_UNAME=${{ secrets.HOST_DB_UNAME }} \
+            --build-arg DB_UPASS=${{ secrets.HOST_DB_UPWD }} \
+            --build-arg DB_NAME=${{ secrets.HOST_DB_NAME }} \
+            --build-arg JWT_SECRET=${{ secrets.JWT_SECRET }} \
+            --build-arg GITHUB_CLIENT_ID=${{ secrets.GITHLIENT_ID }} \
+            --build-arg GITHUB_CLIENT_SECRET=${{ secrets.GITHCLIENT_SECRET }} \
+            --env-file .env -t thilak2302/app:latest .
+          docker push thilak2302/app:latest 
 
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v0.1.6
