--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,8 @@ jobs:
             --build-arg GITHUB_CLIENT_ID=${{ secrets.GITHLIENT_ID }} \
             --build-arg GITHUB_CLIENT_SECRET=${{ secrets.GITHCLIENT_SECRET }} -t thilak2302/app:latest . --push
           docker images  # List local images to verify the tag
-          docker push thilak2302/app:latest
-          docker pull thilak2302/app:latest
+          # docker push thilak2302/app:latest
+          # docker pull thilak2302/app:latest
 #            --env-file .env -t thilak2302/app:latest .
 
       - name: Deploy to VPS
