--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.4.5",
     "handlebars": "^4.7.8",
     "mailchimp-marketing": "^0.0.1-security",
+    "minio": "^8.0.1",
     "mysql2": "^3.9.7",
     "passport": "^0.7.0",
     "passport-apple": "^2.0.2",
@@ -59,6 +60,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.12",
     "@types/passport-google-oauth2": "^0.1.8",
     "@types/passport-jwt": "^4.0.1",
