--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "handlebars": "^4.7.8",
     "mailchimp-marketing": "^0.0.1-security",
     "minio": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "passport": "^0.7.0",
     "passport-apple": "^2.0.2",
@@ -58,7 +59,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.12",
