--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@mailchimp/mailchimp_transactional": "^1.0.59",
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -38,6 +39,7 @@
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express-session": "^1.18.0",
     "handlebars": "^4.7.8",
     "mailchimp-marketing": "^0.0.1-security",
     "minio": "^8.0.1",
